@@ -27,10 +27,11 @@
 package com.oracle.objectfile.elf.dwarf;
 
 import java.lang.reflect.Modifier;
-import java.util.LinkedList;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import com.oracle.objectfile.debugentry.MethodEntry;
 import org.graalvm.compiler.debug.DebugContext;
 
 import com.oracle.objectfile.BuildDependency;
@@ -364,6 +365,8 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
         pos = writeAbbrevCode(abbrevCode, buffer, pos);
         log(context, "  [0x%08x]     language  %s", pos, "DW_LANG_Java");
         pos = writeAttrData1(DwarfDebugInfo.DW_LANG_Java, buffer, pos);
+        log(context, "  [0x%08x]     use_UTF8", pos);
+        pos = writeFlag((byte) 1, buffer, pos);
         log(context, "  [0x%08x]     name  0x%x (%s)", pos, debugStringIndex(classEntry.getFileName()), classEntry.getFileName());
         pos = writeAttrStrp(classEntry.getFileName(), buffer, pos);
         String compilationDirectory = classEntry.getCachePath();
@@ -434,12 +437,14 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
         pos = writeAbbrevCode(abbrevCode, buffer, pos);
         log(context, "  [0x%08x]     language  %s", pos, "DW_LANG_Java");
         pos = writeAttrData1(DwarfDebugInfo.DW_LANG_Java, buffer, pos);
+        log(context, "  [0x%08x]     use_UTF8", pos);
+        pos = writeFlag((byte) 1, buffer, pos);
         log(context, "  [0x%08x]     name  0x%x (%s)", pos, debugStringIndex(fileName), fileName);
         pos = writeAttrStrp(fileName, buffer, pos);
         String compilationDirectory = classEntry.getCachePath();
         log(context, "  [0x%08x]     comp_dir  0x%x (%s)", pos, debugStringIndex(compilationDirectory), compilationDirectory);
         pos = writeAttrStrp(compilationDirectory, buffer, pos);
-        LinkedList<PrimaryEntry> classPrimaryEntries = classEntry.getPrimaryEntries();
+        List<PrimaryEntry> classPrimaryEntries = classEntry.getPrimaryEntries();
         /*
          * Specify hi and lo for the compile unit which means we also need to ensure methods within
          * it are listed in ascending address order.
@@ -654,24 +659,24 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
 
     private int writeMethodDeclarations(DebugContext context, ClassEntry classEntry, byte[] buffer, int p) {
         int pos = p;
-        LinkedList<PrimaryEntry> classPrimaryEntries = classEntry.getPrimaryEntries();
-        for (PrimaryEntry primaryEntry : classPrimaryEntries) {
-            Range range = primaryEntry.getPrimary();
-            /*
-             * Declare all methods including deopt targets even though they are written in separate
-             * CUs.
-             */
-            pos = writeMethodDeclaration(context, classEntry, range, buffer, pos);
+        for (MethodEntry method : classEntry.getMethods()) {
+            if (method.isInRange()) {
+                /*
+                 * Declare all methods including deopt targets even though they are written in
+                 * separate CUs.
+                 */
+                pos = writeMethodDeclaration(context, classEntry, method, buffer, pos);
+            }
         }
 
         return pos;
     }
 
-    private int writeMethodDeclaration(DebugContext context, ClassEntry classEntry, Range range, byte[] buffer, int p) {
+    private int writeMethodDeclaration(DebugContext context, ClassEntry classEntry, MethodEntry method, byte[] buffer, int p) {
         int pos = p;
-        String methodKey = range.getSymbolName();
+        String methodKey = method.getSymbolName();
         setMethodDeclarationIndex(classEntry, methodKey, pos);
-        int modifiers = range.getModifiers();
+        int modifiers = method.getModifiers();
         boolean isStatic = Modifier.isStatic(modifiers);
         log(context, "  [0x%08x] method declaration %s", pos, methodKey);
         int abbrevCode = (isStatic ? DwarfDebugInfo.DW_ABBREV_CODE_method_declaration2 : DwarfDebugInfo.DW_ABBREV_CODE_method_declaration1);
@@ -679,18 +684,23 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
         pos = writeAbbrevCode(abbrevCode, buffer, pos);
         log(context, "  [0x%08x]     external  true", pos);
         pos = writeFlag((byte) 1, buffer, pos);
-        String name = uniqueDebugString(range.getMethodName());
+        String name = uniqueDebugString(method.methodName());
         log(context, "  [0x%08x]     name 0x%x (%s)", pos, debugStringIndex(name), name);
         pos = writeAttrStrp(name, buffer, pos);
-        int fileIdx = classEntry.localFilesIdx();
-        log(context, "  [0x%08x]     file 0x%x (%s)", pos, fileIdx, range.getFileEntry().getFullName());
+        FileEntry fileEntry = method.getFileEntry();
+        if (fileEntry == null) {
+            fileEntry = classEntry.getFileEntry();
+        }
+        assert fileEntry != null;
+        int fileIdx = classEntry.localFilesIdx(fileEntry);
+        log(context, "  [0x%08x]     file 0x%x (%s)", pos, fileIdx, fileEntry.getFullName());
         pos = writeAttrData2((short) fileIdx, buffer, pos);
-        String returnTypeName = range.getMethodReturnTypeName();
+        String returnTypeName = method.getValueType().getTypeName();
         int retTypeIdx = getTypeIndex(returnTypeName);
         log(context, "  [0x%08x]     type 0x%x (%s)", pos, retTypeIdx, returnTypeName);
         pos = writeAttrRefAddr(retTypeIdx, buffer, pos);
-        log(context, "  [0x%08x]     artificial %s", pos, range.isDeoptTarget() ? "true" : "false");
-        pos = writeFlag((range.isDeoptTarget() ? (byte) 1 : (byte) 0), buffer, pos);
+        log(context, "  [0x%08x]     artificial %s", pos, method.isDeoptTarget ? "true" : "false");
+        pos = writeFlag((method.isDeoptTarget ? (byte) 1 : (byte) 0), buffer, pos);
         log(context, "  [0x%08x]     accessibility %s", pos, "public");
         pos = writeAttrAccessibility(modifiers, buffer, pos);
         log(context, "  [0x%08x]     declaration true", pos);
@@ -712,30 +722,26 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
             writeAttrRefAddr(pos, buffer, objectPointerIndex);
         }
         /* Write method parameter declarations. */
-        pos = writeMethodParameterDeclarations(context, classEntry, range, true, buffer, pos);
+        pos = writeMethodParameterDeclarations(context, classEntry, method, true, buffer, pos);
         /*
          * Write a terminating null attribute.
          */
         return writeAttrNull(buffer, pos);
     }
 
-    private int writeMethodParameterDeclarations(DebugContext context, ClassEntry classEntry, Range range, boolean isSpecification, byte[] buffer, int p) {
+    private int writeMethodParameterDeclarations(DebugContext context, ClassEntry classEntry, MethodEntry method, boolean isSpecification, byte[] buffer, int p) {
         int pos = p;
-        if (!Modifier.isStatic(range.getModifiers())) {
+        if (!Modifier.isStatic(method.getModifiers())) {
             pos = writeMethodParameterDeclaration(context, "this", classEntry.getTypeName(), true, isSpecification, buffer, pos);
         }
-        String paramsString = range.getParamSignature();
-        if (!paramsString.isEmpty()) {
-            String[] paramTypes = paramsString.split(",");
-            for (int i = 0; i < paramTypes.length; i++) {
-                String paramName = uniqueDebugString("");
-                String paramTypeName = paramTypes[i].trim();
-                FileEntry fileEntry = range.getFileEntry();
-                if (fileEntry != null) {
-                    pos = writeMethodParameterDeclaration(context, paramName, paramTypeName, false, isSpecification, buffer, pos);
-                } else {
-                    pos = writeMethodParameterDeclaration(context, paramTypeName, paramTypeName, false, isSpecification, buffer, pos);
-                }
+        for (TypeEntry paramType : method.getParamTypes()) {
+            String paramTypeName = paramType.getTypeName();
+            String paramName = uniqueDebugString("");
+            FileEntry fileEntry = method.getFileEntry();
+            if (fileEntry != null) {
+                pos = writeMethodParameterDeclaration(context, paramName, paramTypeName, false, isSpecification, buffer, pos);
+            } else {
+                pos = writeMethodParameterDeclaration(context, paramTypeName, paramTypeName, false, isSpecification, buffer, pos);
             }
         }
         return pos;
@@ -917,7 +923,7 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
 
     private int writeMethodLocations(DebugContext context, ClassEntry classEntry, byte[] buffer, int p) {
         int pos = p;
-        LinkedList<PrimaryEntry> classPrimaryEntries = classEntry.getPrimaryEntries();
+        List<PrimaryEntry> classPrimaryEntries = classEntry.getPrimaryEntries();
         for (PrimaryEntry primaryEntry : classPrimaryEntries) {
             Range range = primaryEntry.getPrimary();
             if (!range.isDeoptTarget()) {
@@ -1185,7 +1191,7 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
     private int writeDeoptMethodsCU(DebugContext context, ClassEntry classEntry, byte[] buffer, int p) {
         int pos = p;
         assert classEntry.includesDeoptTarget();
-        LinkedList<PrimaryEntry> classPrimaryEntries = classEntry.getPrimaryEntries();
+        List<PrimaryEntry> classPrimaryEntries = classEntry.getPrimaryEntries();
         String fileName = classEntry.getFileName();
         int lineIndex = getLineIndex(classEntry);
         int abbrevCode = (fileName.length() > 0 ? DwarfDebugInfo.DW_ABBREV_CODE_class_unit1 : DwarfDebugInfo.DW_ABBREV_CODE_class_unit2);
@@ -1240,7 +1246,7 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
         int methodSpecOffset = getMethodDeclarationIndex(classEntry, methodKey);
         log(context, "  [0x%08x]     specification  0x%x (%s)", pos, methodSpecOffset, methodKey);
         pos = writeAttrRefAddr(methodSpecOffset, buffer, pos);
-        pos = writeMethodParameterDeclarations(context, classEntry, range, false, buffer, pos);
+        pos = writeMethodParameterDeclarations(context, classEntry, range.getMethodEntry(), false, buffer, pos);
         /*
          * Write a terminating null attribute.
          */
@@ -1270,10 +1276,10 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
         }
     }
 
-    private static int findLo(LinkedList<PrimaryEntry> classPrimaryEntries, boolean isDeoptTargetCU) {
+    private static int findLo(List<PrimaryEntry> classPrimaryEntries, boolean isDeoptTargetCU) {
         if (!isDeoptTargetCU) {
             /* First entry is the one we want. */
-            return classPrimaryEntries.getFirst().getPrimary().getLo();
+            return classPrimaryEntries.get(0).getPrimary().getLo();
         } else {
             /* Need the first entry which is a deopt target. */
             for (PrimaryEntry primaryEntry : classPrimaryEntries) {
@@ -1288,10 +1294,10 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
         return 0;
     }
 
-    private static int findHi(LinkedList<PrimaryEntry> classPrimaryEntries, boolean includesDeoptTarget, boolean isDeoptTargetCU) {
+    private static int findHi(List<PrimaryEntry> classPrimaryEntries, boolean includesDeoptTarget, boolean isDeoptTargetCU) {
         if (isDeoptTargetCU || !includesDeoptTarget) {
             /* Either way the last entry is the one we want. */
-            return classPrimaryEntries.getLast().getPrimary().getHi();
+            return classPrimaryEntries.get(classPrimaryEntries.size() - 1).getPrimary().getHi();
         } else {
             /* Need the last entry which is not a deopt target. */
             int hi = 0;
@@ -1325,7 +1331,7 @@ public class DwarfInfoSectionImpl extends DwarfSectionImpl {
         if (buffer == null) {
             return pos + value.length() + 1;
         } else {
-            return putAsciiStringBytes(value, buffer, pos);
+            return putUTF8StringBytes(value, buffer, pos);
         }
     }
 
